--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js",
-    "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "nodemon server.js",
+    "build": "next build"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +17,8 @@
     "next": "^4.2.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.12"
   }
 }
