--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.6",
     "@fortawesome/fontawesome-free-solid": "^5.0.6",
     "@fortawesome/react-fontawesome": "0.0.17",
-    "dateformat": "^3.0.2",
+    "dateformat": "^3.0.3",
     "express": "^4.16.2",
     "graphql-request": "^1.4.1",
-    "next": "^5.0.0",
+    "next": "^5.0.1-canary.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "nodemon": "^1.14.12"
+    "nodemon": "^1.14.12",
+    "webpack": "^3.10.0"
   }
 }
