--- a/package.json
+++ b/package.json
@@ -18,12 +18,20 @@
     "dateformat": "^3.0.3",
     "express": "^4.16.2",
     "graphql-request": "^1.4.1",
-    "next": "^5.0.1-canary.1",
+    "next": "^5.0.1-canary.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "eslint": "^4.17.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-standard": "^3.0.1",
     "nodemon": "^1.14.12",
+    "prettier-eslint": "^8.8.1",
     "webpack": "^3.10.0"
   }
 }
