--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.6",
     "@fortawesome/fontawesome-free-solid": "^5.0.6",
     "@fortawesome/react-fontawesome": "0.0.17",
+    "@zeit/next-sass": "^0.1.1",
     "dateformat": "^3.0.3",
     "express": "^4.16.2",
     "graphql-request": "^1.5.0",
     "next": "^5.0.1-canary.10",
+    "node-sass": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
