--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-plugin-standard": "^3.0.1",
     "nodemon": "^1.17.1",
     "prettier-eslint": "^8.8.1",
+    "html-loader": "^0.5.5",
+    "markdown-loader": "^2.0.2",
     "webpack": "^3.11.0"
   }
 }
