--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon server.js | bunyan",
     "build": "next build"
   },
   "keywords": [],
@@ -16,14 +16,43 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
     "@fortawesome/react-fontawesome": "0.0.17",
     "@zeit/next-sass": "^0.1.1",
+    "apollo-errors": "^1.7.1",
+    "apollo-resolvers": "^1.1.0",
+    "apollo-server-express": "^1.3.2",
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.2",
+    "bunyan": "^1.8.12",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.1",
+    "graphql": "^0.13.1",
+    "graphql-iso-date": "^3.5.0",
     "graphql-request": "^1.5.1",
+    "graphql-tools": "^2.23.0",
+    "hashids": "^1.1.4",
+    "highlight.js": "^9.12.0",
+    "jsonwebtoken": "^8.2.0",
+    "lodash.compact": "^3.0.1",
+    "lodash.head": "^4.0.1",
+    "markdown-it": "^8.4.1",
+    "markdown-it-checkbox": "^1.1.0",
+    "markdown-it-emoji": "^1.4.0",
+    "micropub-express": "^0.7.1",
+    "mongoose": "^5.0.10",
+    "mongoose-plugin-autoinc": "^1.1.9",
+    "morgan": "^1.9.0",
     "next": "^5.0.1-canary.14",
+    "node-fetch": "^2.1.1",
     "node-sass": "^4.7.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "twemoji": "^2.5.1"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
     "eslint": "^4.18.2",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.9.0",
