update deps, remove unecessary webpack dep

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "errorhandler": "^1.5.0",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "graphql": "^0.13.1",
     "graphql-iso-date": "^3.5.0",
@@ -44,7 +44,7 @@
     "mongoose": "^5.0.10",
     "mongoose-plugin-autoinc": "^1.1.9",
     "morgan": "^1.9.0",
-    "next": "^5.0.1-canary.14",
+    "next": "^5.0.1-canary.15",
     "node-fetch": "^2.1.1",
     "node-sass": "^4.7.2",
     "react": "^16.2.0",
@@ -62,8 +62,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "html-loader": "^0.5.5",
     "markdown-loader": "^2.0.2",
-    "nodemon": "^1.17.1",
-    "prettier-eslint": "^8.8.1",
-    "webpack": "^3.11.0"
+    "nodemon": "^1.17.2",
+    "prettier-eslint": "^8.8.1"
   }
 }
