--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
     "@fortawesome/react-fontawesome": "0.0.17",
     "@zeit/next-sass": "^0.1.2",
+    "bulma": "^0.6.2",
     "express": "^4.16.3",
     "graphql-request": "^1.5.1",
-    "next": "^5.0.1-canary.17",
+    "next": "^5.1.0",
     "node-sass": "^4.8.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
